fix: remove out-of-nowhere floating instagram icon on safari

--- a/public/scss/components/Header.module.scss
+++ b/public/scss/components/Header.module.scss
@@ -227,6 +227,9 @@
         overflow-x: hidden;
         overflow-y: hidden;
 
+        // Fix Safari issue
+        transform: translate3d(0, 0, 0);
+
         & ~ main,
         & ~ footer
         {
